[tool.poetry]
name = "banana-milk"
version = "0.1.0"
description = ""
authors = ["김도연 <playnstop.s@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = "^0.23.2"
fastapi = "^0.102.0"
alembic = "^1.11.3"
sqlalchemy = "^2.0.20"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
